# lit-rs

./: .clippy.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml
.ramekin/: Dockerfile
examples/: hello.md  nested-blocks.md
lit/: cli.md  constraints.md  dependencies.md  lit.md
src/: lib.rs  main.rs
test_docs/: example.md  nested.md
tests/: integration_test.rs
