[package]
name = "lit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
color-eyre = "*"
markdown = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
url = "*"
walkdir = "*"

[dev-dependencies]
tempfile = "*"
