[package]
name = "lit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
fs-err = "*"
markdown = "*"
miette = { version = "*", features = ["fancy"] }
regex = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
url = "*"
walkdir = "*"
z3 = { version = "*", features = ["static-link-z3"] }

[dev-dependencies]
tempfile = "*"

[lints.clippy]
self_named_module_files = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
